@ What does this version number mean (major.minor.revision.build)?
1. Major: Huge change to a mod
2. Minor: Major Minecraft update
3. Revision: Important changes to a mod
4. Build: Whenever I end working on a mod (e.g. every day). Also independent 

build 5 of 0.1.0:
- Keybinding for GUI is implemented
- Got rid of Master Coin

build 4 of 0.1.0:
- Redeem Code in menu is done
- Fixed: GUIs pause game
- Fixed: LuckyCoins creative tab is empty because it was constructed before pre init
- Fixed: Buttons aren't clickable because mouseClicked() overridden it

build 3 of 0.1.0:
- Much stuff has been added

build 2 of 0.1.0:
- First mod setup done
- Added Master Coin

build 1 of 0.1.0:
- Installed forge, yikes