@@ -6,6 +6,7 @@ public class Configuration
 {
 	public static net.minecraftforge.common.config.Configuration config;
 	
+	@Deprecated
 	public static String TIME_ZONE;
 	
 	public static void init(File file)
@@ -17,7 +18,7 @@ public class Configuration
 	{
 		config.load();
 		
-		TIME_ZONE = config.get(net.minecraftforge.common.config.Configuration.CATEGORY_GENERAL, "TimeZone", "GMT+4:00").getString();
+		TIME_ZONE = config.get(net.minecraftforge.common.config.Configuration.CATEGORY_GENERAL, "TimeZone", "GMT+4:00", "@Deprecated").getString();
 		
 		if (config.hasChanged())
 		{
