@@ -8,6 +8,13 @@ import net.minecraft.util.StatCollector;
 
 public class DailyQuest
 {
+	private static int nextFreeID = 0;
+	
+	public static final DailyQuest PLAYER_KILL = new DailyQuest("PLAYER_KILL", 50, 3);
+	public static final DailyQuest ZOMBIE_HEAL = new DailyQuest("ZOMBIE_HEAL", 70, 1);
+	public static final DailyQuest HARVESTER = new DailyQuest("HARVESTER", 50, 50);
+	public static final DailyQuest KNOCKDOWN = new DailyQuest("KNOCKDOWN", 60, 150);
+	
 	public final int index;
 	public final String name;
 	public final int reward;
@@ -15,7 +22,8 @@ public class DailyQuest
 	
 	protected DailyQuest(String name, int reward, int max)
 	{
-		this.index = DailyQuestHandler.getNextFreeDailyQuestIndex();
+		this.index = nextFreeID;
+		nextFreeID++;
 		this.name = name;
 		this.reward = reward;
 		this.max = max;
