@@ -7,7 +7,7 @@ public class DailyQuestData
 {
 	public DailyQuest daily;
 	public String date;
-	public int left;
+	public int completed;
 	public boolean got_reward;
 	
 	public DailyQuestData(DailyQuest daily)
@@ -19,14 +19,15 @@ public class DailyQuestData
 	public void writeToNBT(NBTTagCompound tag)
 	{
 		tag.setString("Date", date);
-		tag.setInteger("Left", left);
+		tag.setInteger("Completed", completed);
 		tag.setBoolean("GotReward", got_reward);
 	}
 	
 	public void readFromNBT(NBTTagCompound tag)
 	{
 		this.daily = LuckyCoins.quests.getCurrentDailyQuest();
-		this.left = tag.getInteger("Left");
+		this.date = tag.getString("Date");
+		this.completed = tag.getInteger("Completed");
 		this.got_reward = tag.getBoolean("GotReward");
 	}
 }
