@@ -1,0 +1,1 @@
+public net.minecraft.entity.monster.EntityZombie field_82234_d # EntityZombie.conversionTime
